Closed
Bug 817395
Opened 13 years ago
Closed 12 years ago
"ASSERTION: style context has old rule node: 'n == mRuleTree'" when setting root.style.fontSize
Categories
(Core :: CSS Parsing and Computation, defect)
Core
CSS Parsing and Computation
Tracking
()
RESOLVED
FIXED
mozilla21
People
(Reporter: kennyluck, Assigned: kennyluck)
References
()
Details
(Keywords: assertion, testcase)
Attachments
(1 file)
|
769 bytes,
patch
|
dbaron
:
review+
|
Details | Diff | Splinter Review |
No description provided.
| Assignee | ||
Comment 1•13 years ago
|
||
/layout/style/test/test_rem_unit.html already covers this situation but it's a news to me that assertion failures in Mochitests don't turn tests orange...
Attachment #687522 -
Flags: review?(dbaron)
Comment 2•13 years ago
|
||
(In reply to Kang-Hao (Kenny) Lu [:kennyluck] from comment #1)
> Created attachment 687522 [details] [diff] [review]
> oneliner
>
> /layout/style/test/test_rem_unit.html already covers this situation but it's
> a news to me that assertion failures in Mochitests don't turn tests orange...
Bug 404077
| Assignee | ||
Comment 3•13 years ago
|
||
Ha, thanks. I'm following it now.
Comment on attachment 687522 [details] [diff] [review]
oneliner
r=dbaron. Thanks for the fix.
Would you mind adding
[diff]
unified = 8
to your .hgrc so your diffs show more context, though?
Attachment #687522 -
Flags: review?(dbaron) → review+
Comment 6•12 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla21
You need to log in
before you can comment on or make changes to this bug.
Description
•