Bug 817395 - Clean up the temporary style context used for font size comparision of the root before the rule node tree is rebuilt. r=dbaron